# recipes

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  render.yaml
.claude-plugin/: marketplace.json
.claude/skills/enrich/: SKILL.md
.github/workflows/: ci.yaml  ingest.yaml
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_init.sql  0002_raw_imports.sql  0003_auth.sql  0004_ingredient_structured.sql  0004_ingredient_structures.sql  0005_runs.sql  0006_sessions.sql  0007_rename_pick_sessions.sql  0008_step_structures.sql  0009_kitchens.sql  0010_primary_kitchen.sql  0011_pick_lobby.sql  0012_no_guests.sql  0013_expiring_invites.sql  0014_equipment_structures.sql
backend/src/: admin.rs  auth.rs  db.rs  derive.rs  enrich.rs  enrich_api.rs  equipment.rs  equipment_api.rs  error.rs  ingest.rs  kitchens.rs  main.rs  mcp.rs  proxy.rs  recipes.rs  runs.rs  session.rs  step_api.rs  steps.rs  sync.rs  walk.rs
crates/recipe-core/: Cargo.toml
crates/recipe-core/src/: adapters.rs  equipment.rs  lib.rs  measure.rs  models.rs  schema_org.rs  step.rs  themealdb.rs
crates/recipe-walk/: Cargo.toml
crates/recipe-walk/examples/: compare.rs
crates/recipe-walk/src/: eval.rs  graph.rs  lib.rs  strategy.rs
crates/recipe-walk/tests/: variety.rs
crates/recipe-wasm/: Cargo.toml
crates/recipe-wasm/src/: lib.rs
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/scripts/: lint-design.mjs  lint-stories.mjs  visual-diff.mjs  visual-shoot.mjs
frontend/src/: app.css
frontend/src/lib/: auth.ts  backend.ts  buy.ts  client.ts  cook.ts  fixtures.ts  health.ts  kitchens.ts  measure.ts  pick.ts  resource.ts  session.ts  sources.ts  steps.ts  turso.ts  types.ts  walk.ts  wasm.ts
frontend/src/lib/components/: Alert.stories.ts  Alert.svelte  Button.stories.ts  Button.svelte  Buy.stories.ts  Buy.svelte  CategoryPicker.stories.ts  CategoryPicker.svelte  Cook.stories.ts  Cook.svelte  Decider.stories.ts  Decider.svelte  DesignSystem.stories.ts  DesignSystem.svelte  Field.stories.ts  Field.svelte  HealthDashboard.stories.ts  HealthDashboard.svelte  ImportResult.stories.ts  ImportResult.svelte  Kitchen.stories.ts  Kitchen.svelte  KitchenBackdrop.stories.ts  KitchenBackdrop.svelte  KitchenInvite.stories.ts  KitchenInvite.svelte  KitchenItems.stories.ts  KitchenItems.svelte  KitchenList.stories.ts  KitchenList.svelte  KitchenNew.stories.ts  KitchenNew.svelte  KitchenRename.stories.ts  KitchenRename.svelte  KitchenTalk.stories.ts  KitchenTalk.svelte  Kitchens.stories.ts  Kitchens.svelte  KitchensPreview.stories.ts  KitchensPreview.svelte  (+35 more)
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
frontend/src/routes/(app)/: +layout.svelte  +page.svelte
frontend/src/routes/(app)/buy/: +page.svelte
frontend/src/routes/(app)/cook/: +page.svelte
frontend/src/routes/(app)/health/: +page.svelte
frontend/src/routes/(app)/joy/: +page.svelte
frontend/src/routes/(app)/kitchens/: +layout.svelte  +page.svelte
frontend/src/routes/(app)/kitchens/[id]/: +page.svelte
frontend/src/routes/(app)/kitchens/[id]/equipment/: +page.svelte
frontend/src/routes/(app)/kitchens/[id]/invite/: +page.svelte
frontend/src/routes/(app)/kitchens/[id]/name/: +page.svelte
frontend/src/routes/(app)/kitchens/[id]/pantry/: +page.svelte
frontend/src/routes/(app)/kitchens/new/: +page.svelte
frontend/src/routes/(app)/pick/: +layout.svelte  +page.svelte
frontend/src/routes/(app)/pick/[channel]/: +page.svelte
frontend/src/routes/auth/finish/: +page.svelte
plugins/recipes-enrich/.claude-plugin/: plugin.json
plugins/recipes-enrich/skills/enrich/: SKILL.md
plugins/recipes-enrich/skills/enrich-equipment/: SKILL.md
plugins/recipes-enrich/skills/enrich-steps/: SKILL.md
scripts/: enrich-cron.sh  enrich.env.example
