[package]
name = "recipe-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for recipe-core — recipe normalization in the browser"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
recipe-core = { path = "../recipe-core" }
# Pinned to match the rainix-provided wasm-bindgen CLI (0.2.122); the crate and
# CLI versions must be identical or `wasm-bindgen` over the built wasm fails.
wasm-bindgen = "=0.2.122"
serde-wasm-bindgen = "0.6"

# wasm-pack runs `wasm-opt` itself when it can find one (binaryen comes from the
# flake, and `--mode no-install` stops wasm-pack fetching its own). Its default
# invocation is plain `-O`, which FAILS on this module: the bundle uses
# bulk-memory and non-trapping float casts, so those features must be enabled
# explicitly. Optimize for size — normalization is a few hundred microseconds of
# parsing per fetch, so nobody waits on its CPU time, while every visitor pays
# for the bytes.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz', '--enable-bulk-memory', '--enable-nontrapping-float-to-int']

# Keep the dev loop fast; wasm-opt on a debug build is wasted time.
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
